--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ branch = "pdl-sub-protocol"
 
 [dependencies.kms]
 git = "https://github.com/KZen-networks/kms"
-branch = "pdl-support"
+branch = "schnorr_support"
 
 [patch.crates-io]
 rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
