--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,15 @@ paillier = { git = "https://github.com/mortendahl/rust-paillier" }
 [dependencies.cryptography-utils]
 git = "https://github.com/KZen-networks/cryptography-utils"
 features =  ["curvesecp256k1"]
-branch = "freeze-mvp-subzero"
+branch = "v0.0.1-no-pdl"
 
 [dependencies.multi-party-ecdsa]
 git = "https://github.com/KZen-networks/multi-party-ecdsa"
-branch = "freeze-mvp-subzero"
+branch = "v0.0.1-no-pdl"
 
 [dependencies.kms]
 git = "https://github.com/KZen-networks/kms"
-branch = "freeze-mvp-subzero"
+branch = "v0.0.1-no-pdl"
 
 [patch.crates-io]
 rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
