--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ branch = "v0.0.1-no-pdl"
 
 [dependencies.multi-party-ecdsa]
 git = "https://github.com/KZen-networks/multi-party-ecdsa"
-branch = "v0.0.1-no-pdl"
+branch = "support-v"
 
 [dependencies.kms]
 git = "https://github.com/KZen-networks/kms"
-branch = "v0.0.1-no-pdl"
+branch = "support-v"
 
 [patch.crates-io]
 rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
